# guava-rt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  example_prostate.ipynb  example_prostate.py  example_prostate_out.txt  metrics.py  pyproject.toml  spec_file.txt
.github/workflows/: branch-ci.yml  release.yml
example/: example_prostate.ipynb  example_prostate.py
src/guava/: distance_transform_edt.py  metrics.py  region.py
src/guava-rt/: __init__.py
src/guava_enigmaoffline/: utils.py
src/guava_rt/: __init__.py  distance_transform_edt.py  mask.py  metrics.py  region.py
src/guava_rt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
