[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "guava-rt"
dynamic = ["version"]
description = "A geometrical upright-supine anatomical variation analysis framework"
readme = "README.md"
authors = [
    { name = "Chung Tin Lo", email = "lochungtin@gmail.com" },
    { name = "Jamie McClelland" },
    { name = "Tracy Underwood" },
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
]
keywords = [
    "upright", "supine", "anatomy", "medical images", "geometrical", "analysis", "metrics"
]

[project.urls]
Homepage = "https://github.com/lochungtin/GUAVA"
Repository = "https://github.com/lochungtin/GUAVA.git"
"Bug Tracker" = "https://github.com/lochungtin/GUAVA/issues"
Changelog = "https://github.com/lochungtin/GUAVA/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

# pyproject.toml
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.10"
tag_format = "v$version"
